@@ -12,11 +12,14 @@ pRolocVis(object)
 \arguments{
 \item{object}{an object of class \code{MSnSet} or a list of \code{MSnSet}s
 (pRolocVis), a list of length 2 of \code{MSnSet}s (pRolocComp).}
+
+\item{method}{The method to be used for dimenstionality
+reduction. See \code{plot2D} for details.}
 }
 \value{
-An object \code{pRolocGUI_SearchResults} of class \code{FoICollection}
-when the object existed already or when a new \code{FoICollection} was
-created during a session.
+An object \code{pRolocGUI_SearchResults} of class
+\code{FoICollection} when the object existed already or when a new
+\code{FoICollection} was created during a session.
 }
 \description{
 \code{pRolocVis} and \code{pRolocComp} launch shiny sessions
@@ -55,12 +58,15 @@ data(dunkley2006, package = "pRolocdata")
 
 ## create lists with unnamed and named objects
 unnamedVis <- list(andy2011, tan2009r1, dunkley2006)
-namedVis <- list(andy2011 = andy2011, tan2009r1 = tan2009r1, dunkley2006 = dunkley2006)
+namedVis <- list(andy2011 = andy2011,
+                 tan2009r1 = tan2009r1,
+                 dunkley2006 = dunkley2006)
 unnamedComp <- list(tan2009r1, tan2009r2)
-namedComp <- list(tan2009r1 = tan2009r1, tan2009r2 = tan2009r2)
+namedComp <- list(tan2009r1 = tan2009r1,
+                  tan2009r2 = tan2009r2)
 
-## launch application by either assigning a MSnSet, an unnamed or a
-## named list to the argument object
+## launch application by either assigning a MSnSet,
+## an unnamed or a named list to the argument object
 pRolocVis(object = andy2011)
 pRolocVis(object = unnamedVis)
 pRolocVis(object = namedVis)
